# Affiliate-Marketing-Automation

./: .dockerignore  .env.example  .env.prod  .gitignore  BƯỚC 1 ĐÁNH THỨC VÀ KHÔI PHỤC TRÍ N.txt  CLAUDE.md  HUONG_DAN_SU_DUNG.md  TODO.md  alembic.ini  api.txt  build_guide_pdf.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  openapi_check.json  pyproject.toml  run_backend.py  test_ai_quick.py
.claude/: launch.json  settings.local.json
alembic/: env.py
alembic/versions/: 151409122f54_add_channel_type_to_tiktok_projects.py  967ba0427f3c_initial_schema.py  99c497f90c21_add_final_video_url_ready_to_post_at_to_.py  a1b2c3d4e5f6_add_platform_variants_and_manual_publish_log.py  c3d4e5f6a7b8_add_audio_fields_to_content_pieces.py  d4e5f6a7b8c9_add_heygen_fields_to_content_pieces.py  e5f6a7b8c9d0_add_tiktok_projects_table.py  f6a7b8c9d0e1_add_tiktok_phase0_tables.py  ffc02157caee_add_ai_training_data.py
backend/: .dockerignore  Dockerfile  compat.py  config.py  database.py  main.py
backend/affiliate/: adaptive_scheduler.py  pipeline.py  product_scanner.py  publisher.py  scheduler.py  visual_generator.py
backend/ai_engine/: __init__.py  client.py  content_generator.py  cost_tracker.py  elevenlabs_engine.py  gemini_engine.py  gemini_tts_engine.py  heygen_engine.py  kling_engine.py
docs/: ARCHITECTURE.md  MEMORY.md  WORKFLOW.md  privacy.html  terms.html  tiktokBtP04IrENq7z4P4vyU3ZW0vgfxiCxgkL.txt  tiktok_dev_app_setup_guide.md
frontend/: Dockerfile  package-lock.json  package.json
scripts/: check_fail_loud.py  smoke_phase0.py
(+152 files in other folders)
